[package]
name = "dmodman"
version = "0.2.3"
authors = ["dandels <dandels (at) hotmail.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
dirs = "4.0"
futures-util = "0.3"
indexmap = "1.9"
md-5 = "0.10"
percent-encoding = "2.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
tokio = { version = "1", features = ["fs", "macros", "net", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
toml = "0.5"
url = { version = "2", features = [ "serde" ] }
termion = "1.5"
ratatui = { version = "0.21", default-features = false, features = ["termion"] }
users = "0.11"
uuid = { version = "1.4", features = ["v4", "fast-rng"] }

[profile.release]
#This significantly reduces executable size at the cost of compilation time.
lto=true
strip="debuginfo"
