[package]
name = "dmodman"
version = "0.3.0"
authors = ["dandels <dandels (at) hotmail.com>"]
edition = "2021"

[dependencies]
compress-tools = { version = "0.14.3" }
dirs = "5.0"
futures-util = "0.3"
futures-lite = "2.2"
indexmap = "2.2"
libc = "0.2.155"
md-5 = "0.10"
percent-encoding = "2.3"
ratatui = { version = "0.26", default-features = false, features = ["termion"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
shellexpand = "3.1"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = [ "futures-v0_3" ] }
tokio = { version = "1", features = ["fs", "macros", "net", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
toml = "0.8"
#unrar = "0.5.3"
url = { version = "2", features = [ "serde" ] }
termion = "2" # v3 breaks tui-textarea's input()
tui-textarea = { version = "0.4", default-features = false, features = ["termion"] }
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
zstd = "0.13"

[build-dependencies]
bindgen = "0.69.4"

[profile.release]
#This significantly reduces executable size at the cost of compilation time.
lto=true
strip="debuginfo"
